<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/circl"
                android:layout_margin="10dp"
                android:src="@drawable/ic_action_close"
                android:padding="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/close"/>
            <com.github.siyamed.shapeimageview.CircularImageView
                android:id="@+id/userImg"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/avatar"
                android:gravity="center"
                android:layout_gravity="center"
                app:siBorderColor="@color/white"
                app:siBorderWidth="1dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_photo"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/first_name" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/firstNameTxt"
                android:layout_height="wrap_content"
                android:hint="@string/enter_firstName"
                android:textStyle=""
                android:padding="@dimen/_8sdp"
                android:inputType="textPersonName"
                android:background="@drawable/round_corner_gray_border_gray"
                android:layout_marginBottom="@dimen/_8sdp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/second_name" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/secondNameTxt"
                android:layout_height="wrap_content"
                android:hint="@string/enter_secondName"
                android:textStyle=""
                android:padding="@dimen/_8sdp"
                android:inputType="textPersonName"
                android:background="@drawable/round_corner_gray_border_gray"
                android:layout_marginBottom="@dimen/_8sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/Third_name" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/ThirdNameTxt"
                android:layout_height="wrap_content"
                android:hint="@string/enter_thirdName"
                android:textStyle=""
                android:padding="@dimen/_8sdp"
                android:inputType="textPersonName"
                android:background="@drawable/round_corner_gray_border_gray"
                android:layout_marginBottom="@dimen/_8sdp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/password" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/passwordTxt"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:textStyle=""
                android:padding="@dimen/_8sdp"
                android:inputType="textPassword"
                android:background="@drawable/round_corner_gray_border_gray"
                android:layout_marginBottom="@dimen/_8sdp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/cofirm_password" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/confirmPasswordTxt"
                android:layout_height="wrap_content"
                android:hint="@string/enter_Confirm_password"
                android:textStyle=""
                android:padding="@dimen/_8sdp"
                android:inputType="textPassword"
                android:background="@drawable/round_corner_gray_border_gray"
                android:layout_marginBottom="@dimen/_8sdp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/phone" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/phoneNumberTxt"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phoneNumber"
                android:textStyle=""
                android:padding="@dimen/_8sdp"
                android:inputType="number"
                android:background="@drawable/round_corner_gray_border_gray"
                android:layout_marginBottom="@dimen/_8sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/date_ofBirth" />

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/genderTxt"
                android:layout_height="wrap_content"
                android:hint="@string/choose_date"
                android:textStyle=""
                android:padding="@dimen/_8sdp"
                android:drawableEnd="@drawable/ic_angle_down"
                android:background="@drawable/round_corner_gray_border_gray"
                android:layout_marginBottom="@dimen/_8sdp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/gender" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/round_corner_gray_border_gray"
                android:padding="@dimen/_10sdp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/genderSpinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/blood_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/round_corner_gray_border_gray"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/bloodSpinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:entries="@array/blood_arrays"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/country" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/round_corner_gray_border_gray"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/countrySpinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/city" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/round_corner_gray_border_gray"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/citySpinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/Insurance_company" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/round_corner_gray_border_gray"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/InsuranceCompanySpinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/length" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/lengthNumTxt"
                android:layout_height="wrap_content"
                android:hint="@string/enter_length"
                android:textStyle=""
                android:padding="@dimen/_8sdp"
                android:inputType="number"
                android:background="@drawable/round_corner_gray_border_gray"
                android:layout_marginBottom="@dimen/_8sdp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/wight" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/wightNumTxt"
                android:layout_height="wrap_content"
                android:hint="@string/enter_wight"
                android:textStyle=""
                android:padding="@dimen/_8sdp"
                android:inputType="number"
                android:background="@drawable/round_corner_gray_border_gray"
                android:layout_marginBottom="@dimen/_8sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/smoking" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/round_corner_gray_border_gray"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/smokingSpinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/drink" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/round_corner_gray_border_gray"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/drinkSpinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:id="@+id/registerBut"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="0dp"
                android:paddingTop="0dp"
                android:text="@string/next"
                android:background="@drawable/round_corner_green_fill"
                android:textColor="@color/white1"
                android:layout_marginBottom="65dp"
                />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>