<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <VideoView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/videoView"
            android:layout_marginBottom="30dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="5dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/english"
                android:background="#00FFFFFF"
                android:textColor="#000"
                android:textSize="14dp"
                android:padding="5dp"

                android:id="@+id/enBtn"
                android:layout_margin="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="|"
                android:textColor="#000"
                android:textSize="22dp"
                android:layout_margin="10dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/arabic"
                android:background="#00FFFFFF"
                android:textColor="#000"
                android:textSize="14dp"
                android:padding="5dp"
                android:id="@+id/arBtn"
                android:layout_margin="2dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hello"
                android:textColor="#000"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000"
                android:textAlignment="center"
                android:text="@string/intro"
                android:padding="5dp"
                />
            <ImageView
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:layout_margin="15dp"/>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:padding="10dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/create_account"
            android:background="@drawable/green_border_button"
            android:textColor="#1e983d"
            android:textSize="22sp"
            android:layout_marginBottom="5dp"
            android:padding="15dp"
            android:id="@+id/registration"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/login"
            android:background="@drawable/green_border_button"
            android:textColor="#1e983d"
            android:textSize="22sp"
            android:padding="15dp"
            android:id="@+id/loginBtn"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</RelativeLayout>