<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#efefef">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/NoNotification"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/notification"
            android:alpha="0.3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#959b9b9b"
            android:textSize="28dp"
            android:textAlignment="center"
            android:text="@string/no_notifications"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        android:id="@+id/notificationCard"
        android:background="#B5242424"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:padding="8dp"
            android:background="@drawable/white_card"

            android:layout_centerInParent="true"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/You_have_an_appointment_now"
                android:textSize="22dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="60dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:background="@drawable/cancel"
                    android:textColor="#fff"
                    android:textSize="20dp"
                    android:layout_margin="2dp"
                    android:id="@+id/cancel"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/accept"
                    android:background="@drawable/success"
                    android:textColor="#fff"
                    android:textSize="20dp"
                    android:layout_margin="2dp"
                    android:id="@+id/accept"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#fff"
        android:background="@color/greenMain"
        android:textSize="20dp"
        android:textAlignment="center"
        android:text="@string/notifications"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <include layout="@layout/nav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>