<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splach"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_centerInParent="true"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo"
            android:paddingRight="80dp"
            android:paddingLeft="80dp"
            android:scaleType="fitCenter"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="18dp"
            android:layout_margin="10dp"
            android:hint="@string/phone_or_email"
            android:drawableStart="@drawable/ic_person"
            android:textDirection="rtl"
            android:layout_gravity="right"
            android:gravity="center"
            android:id="@+id/email"
            android:background="@drawable/button"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="18dp"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_password"
            android:textDirection="rtl"
            android:layout_gravity="right"
            android:gravity="center"
            android:id="@+id/password"
            android:background="@drawable/button"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/greenMain"
            android:text="@string/login"
            android:textSize="22dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:id="@+id/loginBtn"
            android:background="@drawable/button"
            />
    </LinearLayout>


</RelativeLayout>